# astrologic

./: .gitignore  LICENSE  README.md  habr.md  if.py  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: lint.yml  tests_and_coverage.yml
astrologic/: __init__.py  function_text.py
astrologic/decorators/: always_true.py  base.py  frozen_ifs.py  if_switcher.py  inline.py  tail_recursion_optimization.py
tests/units/decorators/: test_if_switcher.py  test_tail_recursion_optimization.py
